Added the circle shape into the profile picture

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
         <div class="profile-card">
             <div class=profile-details>
-                <img src="images/image-victor.jpg" class="profile-picture" alt="Victor Crest" />
+                <div class="profile-picture-container">
+                    <img src="images/image-victor.jpg" class="profile-picture" alt="Victor Crest" />
+                </div>
                 <p class="profile-info">Victor Crest<span class="profile-age">26</span></p>
                 <p class="profile-location">London</p>
             </div>
